--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/papaparse": "^5.3.9",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "tslib": "^2.6.0",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.10",
+    "d3-dsv": "^3.0.1",
     "papaparse": "^5.4.1"
   }
 }
